# diary-slm

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
diary_slm/: analyzer.py  bear_reader.py  cli.py  constants.py  exceptions.py  model.py  processor.py
docs/: optimization.md
src/diary_slm/: __init__.py  analyzer.py  bear_reader.py  cli.py  constants.py  exceptions.py  model.py
