[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diary-slm"
version = "0.1.0"
description = "Analyze your Bear diary entries using local LLMs with mlx-lm"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mlx-lm>=0.19.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["diary_slm"]

[tool.ruff]
line-length = 100
target-version = "py310"
